--- a/functions/package.json
+++ b/functions/package.json
@@ -11,9 +11,12 @@
     "web-push": "web-push"
   },
   "dependencies": {
+    "@google-cloud/storage": "^2.4.0",
+    "busboy": "^0.3.0",
     "cors": "^2.8.5",
     "firebase-admin": "^6.0.0",
     "firebase-functions": "^2.1.0",
+    "uuid-v4": "^0.1.0",
     "web-push": "^3.3.3"
   },
   "devDependencies": {
