--- a/functions/package.json
+++ b/functions/package.json
@@ -8,7 +8,8 @@
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log",
-    "web-push": "web-push"
+    "web-push": "web-push",
+    "gvk": "web-push generate-vapid-keys"
   },
   "dependencies": {
     "@google-cloud/storage": "^2.4.0",
